--- a/index.html
+++ b/index.html
@@ -1,44 +1,211 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+  <head>
+    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/accordion.css" rel="stylesheet"/>
+    <link href="css/tabbed.css" rel="stylesheet"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title> Dwayne Johnson</title>
+  </head>
 
-<head>
-	<title>Welcome to E Corp.</title>
-	<link href="styles.css" type="text/css" rel="stylesheet">
-</head>
+  <body>
+    <div id="content">
+      <h2>Dwayne Douglas Johnsson</h2>
+      <ul class="accordion">
+        <li>
+          <button class="accordion-control">
+            <h3>About</h3>
+          </button>
+          <div class="accordion-panel">
+            <div>
+              <img
+                src="Dwayne.jpg"
+                alt=""
+                style="float: left; margin: 1em"
+              />
+              <p>
+                Dwayne Douglas Johnson (born May 2, 1972), also known by his ring name The Rock,
+                is an American-Canadian actor, producer, businessman, former football player, and former professional wrestler. Widely regarded as one of the greatest professional wrestlers of all time,[
+             he was integral to the development and success of the WWE during the Attitude Era, an industry boom period in the late 1990s and early 2000s. Johnson wrestled for WWF/E for eight years prior to pursuing an acting career. His films have grossed over $3.5 billion in North America and over $10.5 billion worldwide,
+                 making him one of the world's highest-grossing and highest-paid actors.
+                 Johnson accepted an athletic scholarship to play at the University of Miami, one of the country's top college football programs. As a college freshman, he was a member of the University of Miami's 1991 national championship team but largely spent his four college football years at the University of Miami in backup roles behind elite players,
+                  including future NFL star and Pro Football Hall of Fame inductee Warren Sapp.[11] Johnson aspired to play professional football but went undrafted in the 1995 NFL Draft. Following his graduation from the University of Miami that year,
+                  he signed with the Calgary Stampeders of the Canadian Football League but was cut from the team in his first season.
+              </p>
+              <p>
+                Dwayne' biggest commercial success came with the superhero
+                films Black Adam (2022), in which he played
+                the title character. The former set numerous records at the time
+                of its release for an R-rated comedy and his performance earned
+                him nominations at the Critics' Choice Movie Awards and the
+                Golden Globe Awards.
+              </p>
+              <p>
+                He was awarded a star on the Hollywood Walk of Fame in
+                2017.
+              </p>
+            </div>
+          </div>
+       
+          <button class="accordion-control">
+            <h3>Past Life Of Dwayne</h3>
+          </button>
+          <div class="accordion-panel">
+            <p>
+                Johnson's father was a Black Nova Scotian with a small amount of Irish ancestry. His mother is Samoan. His father and tag team partner Tony Atlas were the first black tag team champions in WWE history, in 1983.[36][37] His mother is the adopted daughter of Peter Maivia, who was also a professional wrestler.Johnson's maternal grandmother Lia was the first female pro wrestling promoter, taking over Polynesian Pacific Pro Wrestling after her husband's death in 1982 and managing it until 1988.Through his maternal grandfather Maivia, Johnson is a non-blood relative to the Anoa'i wrestling family. In 2008, Johnson inducted his father and grandfather into the WWE Hall of Fame.
 
-<body>
-	<section id="container">
-		<header></header>
+Johnson attended Montclaire Elementary School in Charlotte, North Carolina before moving to Hamden, Connecticut, where he attended Shepherd Glen Elementary School and then Hamden Middle School. Johnson attended President William McKinley High School in Honolulu and then Glencliff High School and McGavock High School, both in Nashville, and then Freedom High School in Bethlehem Township in the Lehigh Valley, where he graduated in 1990.
 
-		<nav>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="aboutus.html">About Us</a></li>
-				<li><a href="solutions.html">Solutions</a></li>
-				<li><a href="support.html">Support</a></li>
-				<li><a href="contactus.html">Contact Us</a></li>
-			</ul>
-		</nav>
+At Freedom High School in the Lehigh Valley, Johnson initially struggled and was drawn into a culture of conflict and petty crime. Before the age of 17, he was arrested multiple times for fighting, theft, and check fraud and was suspended two weeks for fighting. The local newspaper later described him as "a troubled teenager with a history of run-ins with police." Freedom High School football coach Jody Cwik, however, saw athletic potential in Johnson, and recruited him to join Freedom's football team, where he played defensive tackle. The experience proved the beginning of a personal transformation for Johnson. "My thought process started to change. That's when I started thinking about goals and what I wanted to accomplish," he has since said about his high school football experience
+            </p>
+            <!-- Content goes here -->
+          </div>
+        </li>
+      </ul>
 
-		<section id="content">
-			<h2>THEME TITLE HERE</h2>
+      <div style="margin-top: 5em">
+        <h2>About Career</h2>
+        <ul class="accordion">
+          <li>
+            <button class="accordion-control">
+              <h3>1991–2003</h3>
+            </button>
+            <div class="accordion-panel">
+              <p>
+                Johnson entered Hollywood and the film industry, becoming a star initially through his wrestling popularity and noted work ethic. Over his acting career, he became one of the highest paid and most successful actors in Hollywood. He began his acting career on television while wrestling. In his first television acting job, in 1999, he played his own father in an episode of That '70s Show called "That Wrestling Show". Nearly a year later, he appeared in the Star Trek: Voyager episode "Tsunkatse" as an alien wrestler who fought popular character Seven of Nine. While Johnson was away from WWE, the company continued to sell "The Rock" merchandise, and he continued to be featured prominently in the opening montages of their television shows.[32]
 
-			<div id="content-list">
-				<!-- sample of what your toString should output
-					<div id="content-item-0">
-						<h4>name here</h4>
-						<p>description here</p>
-						<div>category genre here</div>
-					</div>
-				-->
-			</div>
-		</section>
+                Johnson began his theatrical career in The Mummy Returns (2001), The Scorpion King (2002), The Rundown (2003), and Walking Tall (2004). He played a supporting role in Be Cool (2005) - most notable for the meta element of playing a bodyguard that wants to become an actor and was the primary antagonist in Doom (2005). He also had roles in Gridiron Gang (2006), Reno 911!: Miami (2007), and Southland Tales (2006). He played a cocky famous American football player in The Game Plan (2007) and Agent 23 in Get Smart (2008). He presented the Academy Award for Best Visual Effects at the 80th Academy Awards
+              </p>
+            </div>
+            <button class="accordion-control">
+              <h3>(1990–1994)</h3>
+            </button>
+            <div class="accordion-panel">
+              <p>
+                As he did in high school in Pennsylvania, Johnson continued to play defensive tackle at the University of Miami. In his freshman year there, he was a member of Miami's 1991 national championship team.In his four years playing for the University of Miami team, however, Johnson found himself behind elite players on the depth chart, including future NFL star and Pro Football Hall of Fame inductee Warren Sapp, and appeared mostly in backup roles.
 
-		<footer></footer>
-	</section>
+In 1995, Johnson graduated from the University of Miami with a Bachelor of General Studies and a dual major in criminology and physiology. In addition to being a member of the University of Miami's top tier collegiate football team, Johnson also was one of the University of Miami's most prolific student speakers in the Miami-area community, frequently delivering positive messages about his own struggles and encouraging them to remain in school and avoid the dangers of drug use
+              </p>
+            </div>
+            <button class="accordion-control">
+              <h3>Early career (1996)</h3>
+            </button>
+            <div class="accordion-panel">
+              <p>
+                After being cut by Calgary, Johnson began his professional wrestling career the following year, in 1996. Veteran wrestler Pat Patterson secured several tryout matches for Johnson with the World Wrestling Federation (WWF) in 1996. Wrestling at first under his real name, Johnson defeated The Brooklyn Brawler at a house show on March 10 and lost matches to Chris Candido and Owen Hart. After wrestling at Jerry Lawler's United States Wrestling Association under the name Flex Kavana and winning the USWA tag team championship twice with his partner Bart Sawyer in the summer of 1996, Johnson was signed to a WWF contract. He received additional training from Tom Prichard, alongside Achim Albrecht and Mark Henry.
+              </p>
+              <p>
+                Also he played Debut and Intercontinental Champion (1996–1997),
+                Johnson made his WWF debut as Rocky Maivia, a combination of his father and grandfather's ring names, although his real name was acknowledged by the announcers.[63] He was initially reluctant to take this ring name but was persuaded by Vince McMahon and Jim Ross.[40][64] He was given the nickname "The Blue Chipper" and to play up his lineage, he was hyped as the WWF's first third-generation wrestler.[3] Maivia, a clean-cut face character, was pushed heavily from the start despite his wrestling inexperience. He debuted on Monday Night Raw as a member of Marc Mero's entourage on November 4, 1996.[65] His first match came at Survivor Series, on November 17, 1996 in an eight-man elimination tag match; he was the sole survivor and eliminated the final two members of the opposing team, Crush and Goldust.[66] On February 13, 1997, he won the Intercontinental Championship from Hunter Hearst Helmsley on Monday Night Raw.[67][68][69] Maivia then successfully defended the title against Helmsley at In Your House 13: Final Four.
 
-	<script src="jquery.js"></script>
-	<script src="script.js"></script>
-</body>
+Johnson's first WrestleMania match came at WrestleMania 13 on March 23, 1997, where he was victorious in his Intercontinental Championship defense against The Sultan. WWF fans started to reject his character and push from the company.[70] He defeated Bret Hart by disqualification in a title defense on the March 31 episode of Raw is War.[71] Behind the scenes, Hart mentored Johnson for his first year in WWF[72] and refused to be booked to take the title from him.[73] On April 20, at In Your House 14: Revenge of the 'Taker, he lost to Savio Vega by countout but retained the title. Audiences became increasingly hostile toward Maivia, with chants of "die, Rocky, die" and "Rocky sucks" being heard during his matches.
+              </p>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div style="margin-top: 2em">
+        <h2>More Info</h2>
+        <ul class="tab-list">
+          <li class="active">
+            <a class="tab-control" href="#first">In the media</a>
+          </li>
+          <li>
+            <a class="tab-control" href="#two">Business Ventures</a>
+          </li>
+          <li>
+            <a class="tab-control" href="#three">Personal Life</a>
+          </li>
+          <li>
+            <a class="tab-control" href="#four">Movies</a>
+          </li>
+        </ul>
+        <div class="tab-panel active" id="first">
+          <p>
+            In October 2008, Dwayne wrote for The Huffington Post regarding
+            his plan to run the 2008 New York City Marathon for his father who,
+            at the time, suffered from Parkinson's disease.[51] Dwayne
+            appeared in People's Sexiest Man Alive lists in 2007[52] and
+            2009,[53] and was awarded the top honour in 2010.[54] On February
+            12, 2012, Dwayne appeared on the BBC's Top Gear as the Star in a
+            Reasonably-Priced Car. He posted a time of 1:43.7.[55] On the May
+            13, 2018, broadcast of the South Korean reality television show King
+            of Mask Singer, Dwayne had a special performance in the opening
+            act, singing "Tomorrow".
+          </p>
+        </div>
+        <div class="tab-panel" id="two">
+          <p>
+            In January 2018, Dwayne started the production company Maximum
+            Effort and signed a three-year first-look deal with Fox. Maximum
+            Effort is in development on a live-action adaptation of the board
+            game Clue, to be penned by Deadpool writers Rhett Reese and Paul
+            Wernick.[59] On June 23, 2021, the marketing division of Maximum
+            Efforts Production was spun off as a separate company, and acquired
+            by MNTN Software. Dwayne is the driving force of Maximum
+            Effort and has created ads for a number of his film projects and for
+            brands such as Peloton and R.M. Williams.
+          </p>
+          <p>
+            Dwayne acquired a stake in Aviation American Gin in February
+            2018. He stated that his interest went beyond that of an owner,
+            and that he planned to oversee the product's creative direction as
+            well as taking an active role in the business.
+          </p>
+        </div>
 
+        <div class="tab-panel" id="three">
+          <p>
+            Dwayne began dating singer Alanis Morissette in 2002, and they
+            announced their engagement in June 2004.[78] In February 2007,
+            representatives for the pair announced they had mutually decided to
+            end their engagement. Morissette said her album Flavors of
+            Entanglement was created out of her grief after the split, and the
+            song "Torch" was written about Dwayne.
+          </p>
+          <p>
+            Soon after the end of his relationship with Morissette in 2007,
+            Dwayne began dating actress Scarlett Johansson.[81] They announced
+            their engagement in May 2008, and married on September 27 of
+            that year, in a private ceremony near Tofino, British Columbia.[83]
+            On December 14, 2010, they announced their separation.[84] Dwayne
+            filed for divorce in Los Angeles on December 23, and Johansson
+            filed her response simultaneously. The divorce was finalized on
+            July 1, 2011.
+          </p>
+        </div>
+        <div class="tab-panel" id="four">
+          <p>
+            Dwayne' biggest commercial success came with the superhero films
+            Journet (2012) and Red Notice(2020), in which he played the title
+            character. The former set numerous records at the time of its
+            release for an R-rated comedy and his performance earned him
+            nominations at the Critics' Choice Movie Awards and the Golden Globe
+            Awards.
+          </p>
+          <p>
+            Dwayne then starred in a range of films, including comedies such
+            as National Lampoon's Van Wilder (2002), Waiting... (2005), and The
+            Proposal (2009). He also performed in dramatic roles in Buried
+            (2010), Woman in Gold (2015), and Life (2017), starred in action
+            films such as Blade: Trinity (2004), Green Lantern (2011), 6
+            Underground (2019) and Free Guy (2021), and provided voice acting in
+            the animated features The Croods (2013), Turbo
+          </p>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <h2 style="text-align: center">
+        <a
+          class="tab-control"
+          href="https://en.wikipedia.org/wiki/Dwayne_Johnson"
+          >Resource</a
+        >
+      </h2>
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <script type="text/javascript" src="js/accordion.js"></script>
+    <script type="text/javascript" src="js/tabbed.js"></script>
+  </body>
 </html>
